--- a/all.scss
+++ b/all.scss
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
+  background-image: linear-gradient(-20deg, #f794a4 0%, #fdd6bd 100%);
   color: white;
   font-family: 'Arial', sans-serif;
   display: flex;
@@ -17,11 +17,12 @@ body {
 }
 
 .scary-text {
-  animation: flicker 2s infinite;
+  animation: flicker 5s infinite;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.8), 0 0 20px rgba(255, 255, 255, 0.6), 0 0 30px rgba(255, 255, 255, 0.4);
 }
 
 @keyframes flicker {
-  0%, 100% { opacity: 1; letter-spacing: 10px;}
+  0%, 100% { opacity: 1; letter-spacing: 5px;}
   50% { opacity: 0; letter-spacing: 1px;}
 }
 
